--- a/authentication/templates/auth/complete-info.html
+++ b/authentication/templates/auth/complete-info.html
@@ -1,4 +1,4 @@
-{% extends "layouts/auth.html" %}
+{% extends "layouts/pages.html" %}
 
 {% block title %}
     <title>Cuy Click Perú - Completa tu información</title>
