--- a/authentication/templates/auth/login.html
+++ b/authentication/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends "layouts/auth.html" %} {% block title %}
+{% extends "layouts/pages.html" %} {% block title %}
 <title>Cuy Click Perú - Iniciar sesión</title>
 {% endblock title %} {% block content %}
 
