--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,6 +31,7 @@
 @import 'pages/admin-content.css';
 @import 'pages/auth.css';
 @import 'pages/client-list.css';
+@import 'pages/home.css';
 @import 'pages/order-create.css';
 @import 'pages/order-list.css';
 @import 'pages/profile.css';
