--- a/templates/layouts/pages.html
+++ b/templates/layouts/pages.html
@@ -8,15 +8,20 @@
     {% block title %}
     <title>Cuy Click Perú - Courier</title>
     {% endblock title %}
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link href="{% static 'vendors/boxicons/css/boxicons.min.css' %}" rel='stylesheet'>
+    <link href="{% static 'vendors/balloon/css/balloon.css' %}" rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    {% block styles %} {% endblock styles %}
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
   </head>
   <body>
-    {% include "partials/message.html" %}
-    {% block content %} {% endblock content %}
-
+    <div class="page__wrapper">
+      {% include 'partials/navbar-page.html' %}
+      <div class="container">
+        {% block content %} {% endblock content %}
+      </div>
+    </div>
     {% block scripts %} {% endblock scripts %}
   </body>
 </html>
