--- a/orders/templates/orders/add-addresses.html
+++ b/orders/templates/orders/add-addresses.html
@@ -106,7 +106,7 @@
                             <h6>{{ detail.address_origin.address }}</h6>
                             <div class="text-small font-medium">{{ detail.address_origin.address_city }}</div>
                         </div>
-                        <img class="order-icon" src="{% static 'img/icon/order-icon.svg' %}"/>
+                        <img class="order-icon" src="{% static 'icon/order-icon.svg' %}"/>
                         <div class="address-destiny">
                             <h6>{{ detail.address_destiny.address }}</h6>
                             <div class="text-small font-medium">{{ detail.address_destiny.address_city }}</div>
