--- a/drivers/templates/drivers/edit.html
+++ b/drivers/templates/drivers/edit.html
@@ -16,25 +16,6 @@
 {% endblock content_head %}
 {% block content %}
 <div class="card card-form mb-10">
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %} 
-    {% for field in form %}
-    <div class="form-group">
-      {{ field.label_tag }} 
-      {{ field }} 
-      {% if field.errors %}
-        {% for error in field.errors %}
-        <div class="text-invalid">
-          {{ error }}
-        </div>
-        {% endfor %}
-      {% endif %}
-    </div>
-    {% endfor %}
-    <div class="actions right">
-      <a href="{% url 'drivers:index' %}" class="btn btn-default">Cancelar</a>
-      <button type="submit" class="btn btn-primary">Editar</button>
-    </div>
-  </form>
+  {% include "drivers/snippets/form.html" with btnText='Editar' %} 
 </div>
 {% endblock content %}
