--- a/orders/templates/orders/create.html
+++ b/orders/templates/orders/create.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="order-content w-full">
-            <h4 class="tracking-code"># TRACKING <span>{{ order.tracking_code }}</span></h4>
+            <h5 class="tracking-code">Datos del cliente</span></h5>
             <div class="client-info">
                 {% if order.client %}
                 <div>
