--- a/templates/partials/navbar-page.html
+++ b/templates/partials/navbar-page.html
@@ -15,13 +15,13 @@
             <div>
                 <p class="text-white text-center h6 mb-2">Contáctanos</p>
                 <div class="social__media">
-                    <a href="">
+                    <a target="_blank" href="https://www.facebook.com/Ecourier.Ofic">
                         <i class="bx bxl-facebook bx-sm"></i>
                     </a>
-                    <a href="">
+                    <a target="_blank" href="https://www.instagram.com/e_courierperu/?hl=es">
                         <i class="bx bxl-instagram bx-sm"></i>
                     </a>
-                    <a href="">
+                    <a target="_blank" href="https://wa.link/ymllbm">
                         <i class="bx bxl-whatsapp bx-sm"></i>
                     </a>
                 </div>
