--- a/authentication/templates/auth/login.html
+++ b/authentication/templates/auth/login.html
@@ -9,8 +9,8 @@
   <form method="post">
     {% csrf_token %}
     <div class="form-group">
-      <label for="username">Nombre de usuario</label>
-      <input type="text" name="username" class="input" value="{{ request.POST.username }}" required/>
+      <label for="emai">Correo electrónico</label>
+      <input type="email" name="email" class="input" value="{{ request.POST.email }}" required/>
     </div>
     <div class="form-group">
       <label for="password">Contraseña</label>
