--- a/orders/templates/orders/add-addresses.html
+++ b/orders/templates/orders/add-addresses.html
@@ -103,11 +103,13 @@
                     </div>
                     <div class="address-delivered">
                         <div class="address-origin">
+                            <div class="text-small flex items-center"><i style="margin-right: 5px;" class="bx bx-user bx-xs"></i> {{ detail.address_origin.full_name }}</div>
                             <h6>{{ detail.address_origin.address }}</h6>
                             <div class="text-small font-medium">{{ detail.address_origin.address_city }}</div>
                         </div>
                         <img class="order-icon" src="{% static 'icon/order-icon.svg' %}"/>
                         <div class="address-destiny">
+                            <div class="text-small flex items-center justity-end"><i style="margin-right: 5px;" class="bx bx-user bx-xs"></i> {{ detail.address_destiny.full_name }}</div>
                             <h6>{{ detail.address_destiny.address }}</h6>
                             <div class="text-small font-medium">{{ detail.address_destiny.address_city }}</div>
                         </div>
@@ -115,23 +117,29 @@
                     <div class="address-order-detail">
                         <div class="collapse" x-data="{ isOpen: false }">
                             <div class="collapse-title cursor-pointer" @click="isOpen = !isOpen">
-                                <h6>Detalles</h6>
+                                <h6>Detalles del paquete</h6>
                                 <i class='bx bx-chevron-down bx-sm' :class="{ 'bx-bx-rotate-180': isOpen }" ></i>
                             </div>
                             <div class="collapse-content" x-show.transition.in.scale.opacity.400ms.out.origin.top.scale.opacity.200ms="isOpen">
                                 <div class="client-info">
-                                    <h6 class="mb-2 subheading text-muted">Enviar a</h6>
-                                    <div>
-                                        <h6>{{ detail.address_destiny.full_name }}</h6>
-                                        <p>{{ detail.address_destiny.email }}</p>
-                                    </div>
-                                    <div class="mt-2">
-                                        <h6>Celular</h6>
-                                        <p>{{ detail.address_destiny.cell_phone }}</p>
+                                    <h6 class="mb-2 subheading text-muted">Información del paquete</h6>
+                                    <div class="detail-package">
+                                        <div class="detail-package__row">
+                                          <h6>Tamaño</h6>
+                                          <p>{{ detail.size }}</p>
+                                        </div>
+                                        <div class="detail-package__row">
+                                          <h6>Contenido</h6>
+                                          <p>{{ detail.contain }}</p>
+                                        </div>
+                                        <div class="detail-package__row">
+                                          <h6>Valor</h6>
+                                          <p>{{ detail.value }}</p>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="footer-details mt-4">
-                                    <h6 class="mb-2 subheading text-muted">Detalles del paquete</h6>
+                                    <h6 class="mb-2 subheading text-muted">Detalles</h6>
                                     <div class="package">
                                         {% if detail.image %}
                                         <div class="package-picture modal-container" x-data="{ isOpen: false }">
@@ -166,9 +174,12 @@
                                         </div>
                                         {% endif %}
                                         <div class="package-details">
-                                            <h6>Descripción</h6>
-                                            <p>{{ detail.size }} - {{ detail.contain }} - {{ detail.value }}</p>
+                                            <h6>Nota</h6>
+                                            {% if detail.description %} 
                                             <p>{{ detail.description }}</p>
+                                            {% else %}
+                                            <p>El paquete no tiene una nota...</p>
+                                            {% endif%}
                                         </div>
                                     </div>
                                 </div>
